--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^7.6.0",
     "react-router-hash-link": "^2.4.3",
     "react-simple-typewriter": "^5.0.1",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
